
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_12__ TYPE_3__ ;
typedef struct TYPE_11__ TYPE_2__ ;
typedef struct TYPE_10__ TYPE_1__ ;


typedef int uint8_t ;
struct TYPE_11__ {TYPE_1__* cfg; } ;
typedef TYPE_2__ lfs1_t ;
typedef int lfs1_ssize_t ;
typedef scalar_t__ lfs1_size_t ;
struct TYPE_12__ {int flags; scalar_t__ pos; scalar_t__ size; scalar_t__ off; int block; int cache; int head; } ;
typedef TYPE_3__ lfs1_file_t ;
struct TYPE_10__ {scalar_t__ block_size; } ;


 int LFS1_ERR_BADF ;
 int LFS1_F_READING ;
 int LFS1_F_WRITING ;
 int LFS1_O_WRONLY ;
 int lfs1_cache_read (TYPE_2__*,int *,int *,int ,scalar_t__,int *,scalar_t__) ;
 int lfs1_ctz_find (TYPE_2__*,int *,int *,int ,scalar_t__,scalar_t__,int *,scalar_t__*) ;
 int lfs1_file_flush (TYPE_2__*,TYPE_3__*) ;
 scalar_t__ lfs1_min (scalar_t__,scalar_t__) ;

lfs1_ssize_t lfs1_file_read(lfs1_t *lfs1, lfs1_file_t *file,
        void *buffer, lfs1_size_t size) {
    uint8_t *data = buffer;
    lfs1_size_t nsize = size;

    if ((file->flags & 3) == LFS1_O_WRONLY) {
        return LFS1_ERR_BADF;
    }

    if (file->flags & LFS1_F_WRITING) {

        int err = lfs1_file_flush(lfs1, file);
        if (err) {
            return err;
        }
    }

    if (file->pos >= file->size) {

        return 0;
    }

    size = lfs1_min(size, file->size - file->pos);
    nsize = size;

    while (nsize > 0) {

        if (!(file->flags & LFS1_F_READING) ||
                file->off == lfs1->cfg->block_size) {
            int err = lfs1_ctz_find(lfs1, &file->cache, ((void*)0),
                    file->head, file->size,
                    file->pos, &file->block, &file->off);
            if (err) {
                return err;
            }

            file->flags |= LFS1_F_READING;
        }


        lfs1_size_t diff = lfs1_min(nsize, lfs1->cfg->block_size - file->off);
        int err = lfs1_cache_read(lfs1, &file->cache, ((void*)0),
                file->block, file->off, data, diff);
        if (err) {
            return err;
        }

        file->pos += diff;
        file->off += diff;
        data += diff;
        nsize -= diff;
    }

    return size;
}
